--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Memo is a Unix-style note taking software for POSIX compatitle systems.
+Memo is a Unix-style note taking software for POSIX compatible systems.
 At the moment it's tested only on GNU/Linux, but it should be very portable
 for other platforms. Windows is not supported, but feel free to port Memo
 for it.
