--- a/memo.1
+++ b/memo.1
@@ -10,23 +10,22 @@ memo [OPTIONS]
 Memo is a note taking software for POSIX compatible operating systems.
 The short notes are saved to user's home directory in ~/.memo file.
 .SH OPTIONS
-.IP -a <content> [yyyy-MM-dd]
+.IP "-a <content> [yyyy-MM-dd]"
 Add a new note
-.IP -d <id>
+.IP "-d <id>"
 Delete note by id
 .IP -D
 Delete all notes
-.IP -e <path>
+.IP "-e <path>"
 Export notes as html to a file
-.IP -f <search>
+.IP "-f <search>"
 Find notes by text search
-.IP -F <regex>
+.IP "-F <regex>"
 Find notes by regular expression
-.IP -l <n>
+.IP "-l <n>"
 Show latest n notes
 .IP -s
 Show all notes
-.PP
 .IP -h
 Show short help and exit. This page
 .IP -V
