--- a/memo.1
+++ b/memo.1
@@ -1,7 +1,7 @@
 .\" Manpage for memo.
 .\" Any errors or typos, contact niko@ideabyte.net.
 
-.TH man 1 "20 Oct 2014" "1.0" "memo man page"
+.TH man 1 "24 Oct 2014" "1.0" "memo man page"
 .SH NAME
 memo \- unix-style note taking software
 .SH SYNOPSIS
@@ -25,6 +25,12 @@ Find notes by text search
 Find notes by regular expression
 .IP "-l <n>"
 Show latest n notes
+.IP "-m <id>"
+Mark note status as done
+.IP "-M <id>"
+Mark note status as undone
+.IP -p
+Show current memo file path
 .IP -s
 Show all notes
 .IP -h
