--- a/memo.1
+++ b/memo.1
@@ -31,6 +31,8 @@ Mark note status as done
 Mark note status as undone
 .IP -p
 Show current memo file path
+.IP -R
+Delete all notes marked as done
 .IP -s
 Show all notes
 .IP -h
