Add -T option documentation
Signed-off-by: Niko Rosvall <niko@ideabyte.net>

--- a/memo.1
+++ b/memo.1
@@ -35,6 +35,8 @@ Show current memo file path
 Delete all notes marked as done
 .IP -s
 Show all notes
+.IP -T
+Mark all notes as done
 .IP -h
 Show short help and exit. This page
 .IP -V
