--- a/memo.1
+++ b/memo.1
@@ -1,13 +1,13 @@
 .\" Manpage for memo.
 .\" Any errors or typos, contact niko@ideabyte.net.
 
-.TH man 1 "24 Oct 2014" "1.0" "memo man page"
+.TH man 1 "24 Oct 2014" "1.1" "memo man page"
 .SH NAME
-memo \- unix-style note taking software
+memo \- unix-style note-taking software
 .SH SYNOPSIS
 memo [OPTIONS]
 .SH DESCRIPTION
-Memo is a note taking software for POSIX compatible operating systems.
+Memo is a note-taking software for POSIX compatible operating systems.
 The short notes are saved to user's home directory in ~/.memo file
 by default.
 .SH OPTIONS
