--- a/memo.1
+++ b/memo.1
@@ -68,6 +68,10 @@ Mark note as postponed:
 Show postponed notes:
        memo -P
 .PP
+Postponed notes are not shown with -s. Postponed note
+can be marked as undone or done normally using -m or -M flag.
+Only undone notes can be postponed.
+.PP
 It's possible to change the location (and name) of the .memo
 file. Create $HOME/.memorc with a line MEMO_PATH=/path/you/would/like
 , Memo will use that path instead of the default $HOME/.memo path.
