--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+1.2: 2014-10-30
+	Bugfix version 1.2 released.
+
+	This is an important fix and everyone must updagrade.
+	Memo assumed that the is is always one char long. This caused
+	a problem where note status could not be changed if the id was
+	> 9.
+
+	Thanks for Mikael Berthe for noticing this bug.
+
 1.1: 2014-10-29
         Stable version 1.1 released.
 
