Update homepage address
Signed-off-by: Niko Rosvall <niko@ideabyte.net>

--- a/README
+++ b/README
@@ -5,4 +5,4 @@ under Cygwin, but it's not actively tested under it.
 
 Memo is licenced under the GPL.
 
-For more, see homepage http://www.ideabyte.net/memo/
+For more, see homepage http://www.getmemo.org
