Implement support for exporting csv files.
Commandline option -e now takes an additional argument to determine in
which format the output will be. Supported formats are csv and html.

Signed-off-by: Niko Rosvall <niko@ideabyte.net>

--- a/memo.1
+++ b/memo.1
@@ -1,7 +1,7 @@
 .\" Manpage for memo.
 .\" Any errors or typos, contact niko@ideabyte.net.
 
-.TH man 1 "21 Nov 2014" "1.4" "memo man page"
+.TH man 1 "7 Dec 2014" "1.4" "memo man page"
 .SH NAME
 memo \- unix-style note-taking software
 .SH SYNOPSIS
@@ -17,8 +17,8 @@ Add a new note
 Delete note by id
 .IP -D
 Delete all notes
-.IP "-e <path>"
-Export notes as html to a file
+.IP "-e <format> <path>"
+Export notes to a file. <format> must be either csv or html
 .IP "-f <search>"
 Find notes by text search
 .IP "-F <regex>"
