--- a/memo.1
+++ b/memo.1
@@ -1,7 +1,7 @@
 .\" Manpage for memo.
 .\" Any errors or typos, contact niko@ideabyte.net.
 
-.TH man 1 "7 Dec 2014" "1.4" "memo man page"
+.TH man 1 "22 Dec 2014" "1.5" "memo man page"
 .SH NAME
 memo \- unix-style note-taking software
 .SH SYNOPSIS
@@ -96,6 +96,13 @@ Since version 1.3 -D option asks for confirmation before deleting all
 notes. It's possible to disable this confirmation via ~/.memorc
 property. To disable the confirmation add MEMO_CONFIRM_DELETE=no to
 ~/.memorc file.
+.PP
+Since version 1.5 it's possible to set a property MARK_AS_DONE in
+$HOME/.memorc. The property takes a valid date as a value. For example:
+MARK_AS_DONE=2014-12-23. If the property is set Memo will mark all notes
+older than the property value as done automatically.
+.SH NOTES
+In $HOME/.memorc file must end with a new line.
 .SH BUGS
 Not strictly a bug, but on some terminals with Bash you can't use
 exclamation mark if Bash history expand feature is enabled. For example:
