Ready for 1.5 release
Signed-off-by: Niko Rosvall <niko@ideabyte.net>

--- a/memo.1
+++ b/memo.1
@@ -1,7 +1,7 @@
 .\" Manpage for memo.
 .\" Any errors or typos, contact niko@ideabyte.net.
 
-.TH man 1 "28 Dec 2014" "1.5" "memo man page"
+.TH man 1 "1 Jan 2015" "1.5" "memo man page"
 .SH NAME
 memo \- unix-style note-taking software
 .SH SYNOPSIS
@@ -117,7 +117,7 @@ Bash. It's a feature of Bash.
 .SH AUTHORS
 Written by Niko Rosvall, first version of help written by Jari Aalto.
 .SH COPYRIGHT
-Copyright (C) 2014 Niko Rosvall <niko@ideabyte.net>
+Copyright (C) 2014-2015 Niko Rosvall <niko@ideabyte.net>
 .PP
 Released under license GPL-3+. For more information, see
 http://www.gnu.org/licenses
