--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@
     New command line flag -O added. With -O Memo reorders note id
     codes. For example if there's notes with id codes 1,4 and 5
     they will become 1,2 and 3.
+
+    Search is no longer case sensitive.
     
     On Windows Memo now uses _ as a file prefix instead of dot. So
     On Windows .memorc is _memorc and .memo is _memo. However, Windows
