--- a/memo.1
+++ b/memo.1
@@ -1,5 +1,5 @@
 .\" Manpage for memo.
-.\" Any errors or typos, contact niko@ideabyte.net.
+.\" Any errors or typos, contact niko@byteptr.com.
 
 .TH man 1 "20 Mar 2015" "1.6" "memo man page"
 .SH NAME
@@ -134,7 +134,7 @@ are:
 .SH AUTHORS
 Written by Niko Rosvall and contributors.
 .SH COPYRIGHT
-Copyright (C) 2014-2015 Niko Rosvall <niko@ideabyte.net>
+Copyright (C) 2014-2015 Niko Rosvall <niko@byteptr.com>
 .PP
 Released under license GPL-3+. For more information, see
 http://www.gnu.org/licenses
