--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+1.7: 2019-06-12
+        Version 1.7 released.
+
+        Add supports for long options for easier beginner usage.
+
 1.6: 2015-03-20
 	Version 1.6 released.
 
